--- a/main-analysis.ipynb
+++ b/main-analysis.ipynb
@@ -12,16 +12,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-06-09T15:02:12.497292Z",
-     "start_time": "2025-06-09T15:02:12.492856Z"
+     "end_time": "2025-06-10T09:58:13.341900Z",
+     "start_time": "2025-06-10T09:58:13.317053Z"
     }
    },
    "source": [
+    "from tabnanny import NannyNag\n",
+    "\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import math"
    ],
    "outputs": [],
-   "execution_count": 71
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -32,8 +35,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-09T15:02:12.555856Z",
-     "start_time": "2025-06-09T15:02:12.537892Z"
+     "end_time": "2025-06-10T09:27:21.948386Z",
+     "start_time": "2025-06-10T09:27:21.910165Z"
     }
    },
    "cell_type": "code",
@@ -44,7 +47,7 @@
    ],
    "id": "781e1b0ed31e7e57",
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -4488,6 +4491,525 @@
     }
    ],
    "execution_count": 106
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Altro dataframe: il parametro header definisce da quale riga voglio partire per creare il df\n",
+    "name sostituisce i nomi della riga dell'header con quelli specificati\n",
+    "nrows specifica quante righe vuoi ottenere"
+   ],
+   "id": "1e68779c0f2235e4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T09:34:41.848710Z",
+     "start_time": "2025-06-10T09:34:41.825816Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df2_path = os.path.join(df_dir, 'stock_data.csv')\n",
+    "df2 = pd.read_csv(df2_path, header = 0, names = [\"Tickers\", \"Eps\", \"Revenue\", \"Price\", \"People\"], nrows = 5)\n",
+    "df2"
+   ],
+   "id": "203d76b0f2a8cb3a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Tickers            Eps  Revenue Price         People\n",
+       "0   GOOGL          27.82       87   845     larry page\n",
+       "1     WMT           4.61      484    65           n.a.\n",
+       "2    MSFT             -1       85    64     bill gates\n",
+       "3    RIL   not available       50  1023  mukesh ambani\n",
+       "4    TATA            5.6       -1  n.a.     ratan tata"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tickers</th>\n",
+       "      <th>Eps</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>People</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87</td>\n",
+       "      <td>845</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484</td>\n",
+       "      <td>65</td>\n",
+       "      <td>n.a.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>64</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>not available</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>n.a.</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Ci sono dei dati sporchi come si può vedere, che rappresentano dei NaN, se voglio toglierli posso specificare i n.a values",
+   "id": "98505e198181d6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T09:38:49.060634Z",
+     "start_time": "2025-06-10T09:38:49.036788Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df2 = pd.read_csv(df2_path, header = 0, names = [\"Tickers\", \"Eps\", \"Revenue\", \"Price\", \"People\"], nrows = 5, na_values = [\"not available\", \"n.a.\", -1])\n",
+    "df2"
+   ],
+   "id": "71733d1f547e01f2",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Tickers    Eps  Revenue   Price         People\n",
+       "0   GOOGL  27.82     87.0   845.0     larry page\n",
+       "1     WMT   4.61    484.0    65.0            NaN\n",
+       "2    MSFT    NaN     85.0    64.0     bill gates\n",
+       "3    RIL     NaN     50.0  1023.0  mukesh ambani\n",
+       "4    TATA   5.60      NaN     NaN     ratan tata"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tickers</th>\n",
+       "      <th>Eps</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>People</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Posso anche passarli come json i na_values (per esempio -1 potrebbe essere un valore corretto per una determinata colonna",
+   "id": "2b58d88f0dcc7a93"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T09:43:18.912388Z",
+     "start_time": "2025-06-10T09:43:18.890394Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df2 = pd.read_csv(df2_path, header = 0, names = [\"Tickers\", \"Eps\", \"Revenue\", \"Price\", \"People\"], nrows = 5, na_values =\n",
+    "{\n",
+    "    'Eps' : [\"not available\", \"n.a.\"],\n",
+    "    'Revenue' : [\"not available\", \"n.a.\", -1],\n",
+    "    'Price' : [\"not available\", \"n.a.\", -1],\n",
+    "    'People' : [\"not available\", \"n.a.\", -1]\n",
+    "})\n",
+    "df2"
+   ],
+   "id": "8103ae4116ee9a7a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Tickers    Eps  Revenue   Price         People\n",
+       "0   GOOGL  27.82     87.0   845.0     larry page\n",
+       "1     WMT   4.61    484.0    65.0            NaN\n",
+       "2    MSFT  -1.00     85.0    64.0     bill gates\n",
+       "3    RIL     NaN     50.0  1023.0  mukesh ambani\n",
+       "4    TATA   5.60      NaN     NaN     ratan tata"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tickers</th>\n",
+       "      <th>Eps</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>People</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Se volessi scrivere un csv a partire da un df (posso anche specificare le colonne da scegliere)",
+   "id": "f5d738952646ca9a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T09:51:02.233187Z",
+     "start_time": "2025-06-10T09:51:02.215591Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "out_path = os.path.join(os.getcwd(), \"Outputs\")\n",
+    "new_csv_path = os.path.join(out_path, 'new.csv')\n",
+    "df2.to_csv(new_csv_path, columns = ['Tickers', 'Eps'])"
+   ],
+   "id": "84b860902ab9a9af",
+   "outputs": [],
+   "execution_count": 28
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Posso fare anche delle simpatiche operazioni di conversione scrivendo io delle funzioni apposite",
+   "id": "173a8852011a6dd6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T10:15:44.737581Z",
+     "start_time": "2025-06-10T10:15:44.731261Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def convertitore_nome(cella):\n",
+    "    if pd.isna(cella) or cella==\"n.a.\":\n",
+    "        return \"Pippo\"\n",
+    "    return cella"
+   ],
+   "id": "252491f85b038937",
+   "outputs": [],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T10:15:46.353715Z",
+     "start_time": "2025-06-10T10:15:46.322268Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df2 = pd.read_csv(df2_path, header = 0, names = [\"Tickers\", \"Eps\", \"Revenue\", \"Price\", \"People\"], nrows = 5, na_values =\n",
+    "{\n",
+    "    'Eps' : [\"not available\", \"n.a.\"],\n",
+    "    'Revenue' : [\"not available\", \"n.a.\", -1],\n",
+    "    'Price' : [\"not available\", \"n.a.\", -1],\n",
+    "    'People' : [\"not available\", \"n.a.\", -1]\n",
+    "}, converters = {\n",
+    "    'People' : convertitore_nome\n",
+    "})\n",
+    "df2"
+   ],
+   "id": "fffeac4494fe9872",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "  Tickers    Eps  Revenue   Price         People\n",
+       "0   GOOGL  27.82     87.0   845.0     larry page\n",
+       "1     WMT   4.61    484.0    65.0          Pippo\n",
+       "2    MSFT  -1.00     85.0    64.0     bill gates\n",
+       "3    RIL     NaN     50.0  1023.0  mukesh ambani\n",
+       "4    TATA   5.60      NaN     NaN     ratan tata"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Tickers</th>\n",
+       "      <th>Eps</th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>People</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GOOGL</td>\n",
+       "      <td>27.82</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>larry page</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WMT</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Pippo</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MSFT</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>bill gates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>RIL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>mukesh ambani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>TATA</td>\n",
+       "      <td>5.60</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ratan tata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 38
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Se voglio scriverlo come excel",
+   "id": "2a85aa3ba2c2974c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-10T10:39:44.292668Z",
+     "start_time": "2025-06-10T10:39:43.616196Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "new_xsl_path = os.path.join(out_path, 'new.xlsx')\n",
+    "with pd.ExcelWriter(new_xsl_path) as writer:\n",
+    "    df2.to_excel(writer, sheet_name='Stocks')"
+   ],
+   "id": "2c24afbbd5c92907",
+   "outputs": [],
+   "execution_count": 40
   }
  ],
  "metadata": {
