Aggiornamento con API a partire da un Dataframe

--- a/istat.ipynb
+++ b/istat.ipynb
@@ -4741,12 +4741,25 @@
    "execution_count": 37
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T14:37:03.880263Z",
+     "start_time": "2025-06-19T14:37:03.859628Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df_radio_tv_priv.to_csv(os.path.join(os.getcwd(), 'Outputs', 'ascolti_radio_tv_priv.csv'))",
+   "id": "79f1dcf9bbc87c4c",
+   "outputs": [],
+   "execution_count": 38
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "79f1dcf9bbc87c4c"
+   "id": "6ba2839bc3ef1eb5"
   }
  ],
  "metadata": {
